Fix home on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -738,6 +738,7 @@ $studoWidth: 100px;
 }
 .mode-1 {
     .sub-pane1 {
+        display: block;
         width: 100%;
         padding-top: 30px;
         h1 {
